@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[156] --> Fix Glyph of Succubus. (TEST)
 [155] --> Update Sunwell Plateau by aedansilver.
 [154] --> Fix - Don't Allow Vehicles in Arena by Demonid.
 [153] --> Update Icecrown Citadel by aedansilver.
